[package]
name = "julia_docsets"
version = "0.0.0"
authors = ["Seokjin Han <raifthenerd@gmail.com>"]
description = "Dash/Zeal docsets for selected Julia packages"
readme = "README.md"
license = "MIT"
categories = ["science"]
edition = "2021"

[[bin]]
name = "build_docsets"
path = "src/main.rs"

[profile.release]
lto = "thin"

[dependencies]
