[package]
name = "julia_docsets"
version = "0.1.0"
authors = ["Seokjin Han <raifthenerd@gmail.com>"]
description = "Dash/Zeal docsets for selected Julia packages"
readme = "README.md"
license = "MIT"
categories = ["science"]
edition = "2021"

[[bin]]
name = "build_docsets"
path = "src/main.rs"

[profile.release]
lto = "thin"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.29", features = ["bundled"] }
